[package]
name = "pong"
description = "Classic pong game made with Bevy."
version = "0.1.1"
edition = "2021"
authors = ["Gabriel Kenneth L. Marinas <gabrielkennethmarinas@gmail.com>"]
keywords = ["game", "classic", "arcade", "bevy"]
repository = "https://github.com/marshblocker/pong"
license = "WTFPL"


[dependencies]
bevy = "0.10.1"
rand = "0.8.5"
